compiler-plugin/src/testData/errors/OKProtectedDeclarations.kt
package errors

@ChildrenExported
open class Test {
    <!EXPORTED_MARKER_ClassifierMember(classifier=Classifier(packageName=[errors], classNames=[Test]), name=baz)!>@ExportSymbol
    protected val baz = 3<!>
}
